# risc0

./: CMakeLists.txt  Cargo.toml  README.md  rust-toolchain.toml
examples/: Cargo.toml
examples/cpp/: CMakeLists.txt
examples/cpp/battleship/: CMakeLists.txt
examples/cpp/eos/: CMakeLists.txt  Makefile  everify.cpp  everify.hpp
examples/voting-machine/: Cargo.toml
examples/voting-machine/host/: Cargo.toml
examples/voting-machine/methods/: Cargo.toml
examples/voting-machine/methods/guest/: Cargo.toml
examples/voting-machine/src/: lib.rs
risc0/bootstrap/poseidon/src/: main.rs
risc0/bootstrap/src/: control_id.rs
risc0/build_kernel/src/: lib.rs
risc0/circuit/rv32im/: build.rs
risc0/circuit/rv32im/src/: cpp.rs  cpu.rs  cuda.rs  taps.rs  verify_taps_rv32im.rs
risc0/core/: CMakeLists.txt
risc0/core/src/field/: baby_bear.rs  goldilocks.rs  mod.rs
risc0/r0vm/tests/: standard_lib.rs
risc0/riscv_tests/: Cargo.toml
risc0/sys/: build.rs
risc0/zeroio/src/: deserialize.rs  serialize.rs  serialize_test.rs  util.rs
risc0/zeroio_derive/src/: lib.rs
risc0/zkp/: CMakeLists.txt  Cargo.toml  build.rs
risc0/zkp/accel/: CMakeLists.txt
risc0/zkp/accel/backend/cpu/: CMakeLists.txt
risc0/zkp/core/: CMakeLists.txt
risc0/zkp/prove/: CMakeLists.txt
risc0/zkp/rust/src/: lib.rs
risc0/zkp/src/: taps.rs
risc0/zkp/src/core/: blake2b.rs  config.rs  digest.rs  ntt.rs  poly.rs  sha.rs  sha_cpu.rs  sha_rng.rs
risc0/zkp/src/core/poseidon/: consts.rs  mod.rs  rng.rs
risc0/zkp/src/field/: baby_bear.rs  goldilocks.rs  mod.rs
risc0/zkp/src/hal/: cpu.rs  cuda.rs  metal.rs  mod.rs
risc0/zkp/src/prove/: accum.rs  adapter.rs  executor.rs  merkle.rs  mod.rs  poly_group.rs  prover.rs  write_iop.rs
risc0/zkp/src/verify/: merkle.rs  mod.rs
risc0/zkvm/: CMakeLists.txt  Cargo.toml
risc0/zkvm/benches/: guest_run.rs
risc0/zkvm/platform/: Cargo.toml
risc0/zkvm/platform/src/: bump_alloc.rs  lib.rs  syscall.rs
risc0/zkvm/prove/: CMakeLists.txt
risc0/zkvm/sdk/cpp/: CMakeLists.txt
risc0/zkvm/sdk/cpp/guest/: CMakeLists.txt
risc0/zkvm/sdk/rust/: Cargo.toml
risc0/zkvm/sdk/rust/methods/: Cargo.toml  build.rs
risc0/zkvm/sdk/rust/methods/inner/: Cargo.toml
risc0/zkvm/sdk/rust/src/: lib.rs
risc0/zkvm/sdk/rust/src/host/: ffi.rs  mod.rs
risc0/zkvm/src/: control_id.rs  method_id.rs  receipt.rs  tests.rs
risc0/zkvm/src/binfmt/: elf.rs  image.rs
risc0/zkvm/src/guest/: mod.rs
risc0/zkvm/src/prove/: elf.rs  exec.rs  image.rs  io.rs  loader.rs  mod.rs  plonk.rs  profiler.rs
risc0/zkvm/src/prove/emu/: insn.rs  mod.rs  opcode.rs  preflight.rs
risc0/zkvm/src/prove/preflight/: mod.rs
risc0/zkvm/src/serde/: deserializer.rs  serializer.rs
risc0/zkvm/verify/: CMakeLists.txt
