[package]
name = "voting-machine"
version = "0.12.0"
edition = "2021"

[dependencies]
clap = "4.0"
risc0-zkvm = { path = "../../risc0/zkvm" }
serde = "1.0"
voting-machine-core = { path = "core" }
voting-machine-methods = { path = "methods" }
ctor = "0.1"
env_logger = "0.9.0"
log = "0.4.17"

[dev-dependencies]
hex = "0.4"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
