[package]
name = "risc0-zkvm-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-zkvm = { version = "0.10", path = ".." }
risc0-zkvm-methods-inner = { version = "0.1", path = "inner", artifact = "bin", target = "riscv32im-risc0-zkvm-elf" }

[package.metadata.release]
release = false

[package.metadata.risc0]
methods = ["inner"]

