cargo-features = ["per-package-target"]

[package]
name = "risc0-zkvm-methods-inner"
version = "0.1.0"
edition = "2021"
resolver = "2"

# Make sure we don't try to compile guest methods for the host.
forced-target = "riscv32im-risc0-zkvm-elf"

[dependencies]
getrandom = { version = "0.2", features = ["custom"] }
risc0-zkp = { version = "0.10", path = "../../../../../zkp/rust", default-features = false }
risc0-zkvm-guest = { version = "0.10", path = "../../guest", default-features = false } # , features = ["std"] }

[build-dependencies]
risc0-build = { version = "0.10", path = "../../build" }

[package.metadata.release]
release = false

[features]
default = [# "std",
"test_feature1", "test_feature2"]
std = []
test_feature1 = []
test_feature2 = []

# TODO(nils) Figure out how to have the default be to not try to run
# guest binaries to test them.
[[bin]]
name = "fail"
test = false

[[bin]]
name = "io"
test = false

[[bin]]
name = "sha_accel"
test = false

[[bin]]
name = "sha"
test = false

[[bin]]
name = "test_feature"
test = false
